--- a/about-us.html
+++ b/about-us.html
@@ -55,7 +55,7 @@
                             <div class="left_div">
                                 <div class="top_left_sec">
                                     <ul>
-                                        <li><a href="tel: 91 8323447312"><i class="fa fa-phone c_icon"></i> +91 8323447312</a></li>
+                                        <li><a href="tel: 91 9987096620"><i class="fa fa-phone c_icon"></i> +91 9987096620</a></li>
                                         <li><a href="mailto: info@mayarmds.com"><i class="fa fa-envelope c_icon2"></i>info@mayarmds.com</a></li>
                                     </ul>
                                 </div>
@@ -64,7 +64,7 @@
                                 <div class="top_left_sec">
                                     <ul>
                                         <li><i class="fa fa-history c_icon2"></i> Mon - Fri : 10.00 AM - 06.00 PM</li>
-                                        <li><a href="" target="_blank"><i class="fab fa-linkedin-in c_icon2"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/mayar-detailing-services" target="_blank"><i class="fab fa-linkedin-in c_icon2"></i></a></li>
                                     </ul>
                                     <a href="contact-us.html"><button type="button" class="btn quote_btn">Get A Quote</button></a>
                                 </div>
@@ -105,7 +105,7 @@
                       </div>
                   </li>
                   <li><a href="projects.html">Projects</a></li>
-                  <li><a href="projects.html">Key Personal</a></li>
+                  <li><a href="key-personnel.html">Key Personnel</a></li>
                   <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -167,6 +167,8 @@
                     </div>
                 </div>
             </section>
+
+            
             
             <section class="about_section2">
                 <div class="container">
@@ -229,7 +231,7 @@
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
                                 <div class="add_section2">
-                                    <p><a href="tel:91 8323447312">+91 8323447312</a></p>
+                                    <p><a href="tel:91 9987096620">+91 9987096620</a></p>
                                 </div>
                             </div>
                             <div class="add_section">
