--- a/contact-us.html
+++ b/contact-us.html
@@ -88,7 +88,7 @@
                             <div class="left_div">
                                 <div class="top_left_sec">
                                     <ul>
-                                        <li><a href="tel: 91 8323447312"><i class="fa fa-phone c_icon"></i> +91 8323447312</a></li>
+                                        <li><a href="tel: 91 9987096620"><i class="fa fa-phone c_icon"></i> +91 9987096620</a></li>
                                         <li><a href="mailto: info@mayarmds.com"><i class="fa fa-envelope c_icon2"></i>info@mayarmds.com</a></li>
                                     </ul>
                                 </div>
@@ -97,7 +97,7 @@
                                 <div class="top_left_sec">
                                     <ul>
                                         <li><i class="fa fa-history c_icon2"></i> Mon - Fri : 10.00 AM - 06.00 PM</li>
-                                        <li><a href="" target="_blank"><i class="fab fa-linkedin-in c_icon2"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/company/mayar-detailing-services" target="_blank"><i class="fab fa-linkedin-in c_icon2"></i></a></li>
                                     </ul>
                                     <a href="contact-us.html"><button type="button" class="btn quote_btn">Get A Quote</button></a>
                                 </div>
@@ -138,7 +138,7 @@
                       </div>
                   </li>
                   <li><a href="projects.html">Projects</a></li>
-                  <li><a href="projects.html">Key Personal</a></li>
+                  <li><a href="key-personnel.html">Key Personnel</a></li>
                   <li><a href="contact-us.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -258,7 +258,7 @@
                                                 <i class="fas fa-phone-alt"></i>
                                             </div>
                                             <div class="contact_details2">
-                                                <p><a href="tel:91 8323447312">+91 8323447312</a></p>
+                                                <p><a href="tel:91 9987096620">+91 9987096620</a></p>
                                             </div>
                                         </div>
 
@@ -278,8 +278,6 @@
                     </div>
                 </div>
             </section>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15076.840467103148!2d73.0435831!3d19.1422777!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c17bb7b3923f%3A0xe3594a99ad2af463!2s1104%20Fairfield%2C%20Bharat%20Ecovista%2C%20shilphata%2C%20thane!5e0!3m2!1sen!2sin!4v1694463775617!5m2!1sen!2sin" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
            
             <footer class="footer_section">
                 <div class="container">
@@ -307,7 +305,7 @@
                                     <i class="fas fa-phone-alt"></i>
                                 </div>
                                 <div class="add_section2">
-                                    <p><a href="tel:91 8323447312">+91 8323447312</a></p>
+                                    <p><a href="tel:91 9987096620">+91 9987096620</a></p>
                                 </div>
                             </div>
                             <div class="add_section">
